@@ -1,5 +1,5 @@
 # P1_WishList
-- The user should be able to login to thier account to creat/view/modify their wishlists
+- The user should be able to login to their account to creat/view/modify their wishlists
 - Relations:
 - One user can have many wishlists
   - A wishlist can only belong to one user
@@ -8,5 +8,6 @@
   - An Item has one brand
   - A brand can have many items
 
-- The user should be able to itneract with the interfece and make changes in the backend
+- The user should be able to interact with the interfece and make changes in the backend
 - This program should have 50% test coverage
+-- Add '-XX:+EnableDynamicAgentLoading -Xshare:off" to the CLI arguments or in run configurations in IntelliJ to avoid warnings about inline Mocking
